--- a/contents/docs/classes/audio/index.mdx
+++ b/contents/docs/classes/audio/index.mdx
@@ -3,6 +3,9 @@ title: Audio
 description: An audio buffer loaded completely in memory.
 ---
 - <ApiSig name="Audio" params={[{ name: "file_path", type: "str" }, { name: "volume", type: "float", default: '1.0' }]} />
+<Note>
+Audio file formats supported are WAV, FLAC, and MP3.
+</Note>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
