--- a/contents/docs/functions/renderer/index.mdx
+++ b/contents/docs/functions/renderer/index.mdx
@@ -54,7 +54,7 @@ _**Parameters**_
 
 ---
 
-<ApiSig name="draw" params={[{name: "texture", type: "Texture"}, {name: 'pos', type: 'Vec2', default: 'None'}, {name: 'anchor', type: 'Anchor', default: 'CENTER'}]} returns="None" />
+<ApiSig name="draw" multiline params={[{name: "texture", type: "Texture"}, {name: 'pos', type: 'Vec2', default: 'None'}, {name: 'anchor', type: 'Anchor', default: 'Anchor.CENTER'}]} returns="None" />
 
 Render the texture at the specified position, optionally using an anchor point to control the alignment.
 
