--- a/contents/docs/manual/constants/index.mdx
+++ b/contents/docs/manual/constants/index.mdx
@@ -25,6 +25,22 @@ description: A comprehensive list of constants used in the Kraken Engine.
 | BOTTOM_MID | Anchor |
 | BOTTOM_RIGHT | Anchor |
 
+## Alignments
+| Name | Type |
+| --- | --- |
+| LEFT | Align |
+| CENTER | Align |
+| RIGHT | Align |
+
+## Font Hints
+| Name | Type |
+| --- | --- |
+| NORMAL | FontHint |
+| MONO | FontHint |
+| LIGHT | FontHint |
+| LIGHT_SUBPIXEL | FontHint |
+| NONE | FontHint |
+
 ## Colors
 | Name | Value | Type |
 | --- | --- | --- |
