--- a/contents/docs/manual/keycode-vs-scancode/index.mdx
+++ b/contents/docs/manual/keycode-vs-scancode/index.mdx
@@ -7,7 +7,7 @@ The Kraken Engine uses both keycodes and scancodes to handle keyboard input, but
 Keycodes are the character that the key represents, while scancodes are the physical location of the key on the keyboard.
 For example, the "Q" key on a QWERTY keyboard has a keycode of `K_q` and a scancode of `S_q`, whereas AZERTY keyboards would have a keycode of `K_a` instead.
 
-Here's a comparison of when to use each:
+## When to Use Either
 | Scenario | Keycode (`K_`) | Scancode (`S_`) |
 |-|-|-|
 | **Menu navigation**                     | ✅ Works naturally with the user's keyboard layout            | ❌ Physical key positions may not match expected letters |
