Add new API docs and UI improvements
Added documentation for viewport functions, new event and math APIs, and updated several class docs with new properties and methods. Improved homepage and footer layout for better appearance.

--- a/contents/docs/classes/color/index.mdx
+++ b/contents/docs/classes/color/index.mdx
@@ -18,3 +18,19 @@ description: A color representation in different formats.
 | `a` | The alpha component of the color | `int` |
 | `hex` | The hexadecimal representation of the color | `str` |
 | `hsv` | The HSV representation of the color | `tuple[float,float,float,float]` |
+
+## Methods
+---
+
+### Copy
+<div className="api-card">
+
+<ApiSig name="copy" returns="Color" />
+
+Create a copy of the color.
+
+_**Returns**_
+
+`Color` : A new color object that is a copy of the original.
+
+</div>
