--- a/contents/docs/classes/font/index.mdx
+++ b/contents/docs/classes/font/index.mdx
@@ -21,3 +21,9 @@ No matter the font, `pt_size` will be clamped to a minimum of 8.
 | `italic` | Whether the font is italic. | `bool` |
 | `underline` | Whether the font is underlined. | `bool` |
 | `strikethrough` | Whether the font is strikethrough. | `bool` |
+| `height` | The height of the font in pixels. | `int` |
+| `ascent` | The ascent of the font in pixels. | `int` |
+| `descent` | The descent of the font in pixels. | `int` |
+| `line_spacing` | The line spacing of the font in pixels. | `int` |
+| `kerning` | Whether kerning is enabled for the font. | `bool` |
+| `outline` | The outline thickness of the font in pixels. | `int` |
