--- a/contents/docs/functions/draw/index.mdx
+++ b/contents/docs/functions/draw/index.mdx
@@ -77,6 +77,21 @@ _**Parameters**_
 
 </div>
 
+## Ellipse
+<div className="api-card">
+
+<ApiSig name="ellipse" params={[{ name: "bounds", type: "Rect" }, { name: "color", type: "Color" }, { name: "filled", type: "bool", default: "false" }]} returns="None" />
+
+Draws an ellipse within the specified bounding rectangle with the given color and optional fill.
+
+_**Parameters**_
+
+- `bounds` : The bounding rectangle for the ellipse.
+- `color` : The color of the ellipse.
+- `filled` : Whether to fill the ellipse. Defaults to false (outline only).
+
+</div>
+
 ## Rect
 <div className="api-card">
 
