--- a/contents/docs/functions/math/index.mdx
+++ b/contents/docs/functions/math/index.mdx
@@ -233,6 +233,24 @@ _**Returns**_
 
 </div>
 
+## Rotate
+<div className="api-card">
+
+<ApiSig name="rotate" params={[{ name: "vec", type: "Vec2" }, { name: "angle", type: "float" }]} returns="Vec2" />
+
+Rotate a vector by a given angle.
+
+_**Parameters**_
+
+- `vec` : The vector to rotate.
+- `angle` : The angle to rotate the vector by, in radians.
+
+_**Returns**_
+
+`Vec2` : The rotated vector.
+
+</div>
+
 ## Angle Between
 <div className="api-card">
 
