--- a/contents/docs/manual/constants/index.mdx
+++ b/contents/docs/manual/constants/index.mdx
@@ -32,6 +32,13 @@ description: A comprehensive list of constants used in the Kraken Engine.
 | CENTER | Align |
 | RIGHT | Align |
 
+## Scroll Modes
+| Name | Type |
+| --- | --- |
+| SMEAR | ScrollMode |
+| REPEAT | ScrollMode |
+| ERASE | ScrollMode |
+
 ## Font Hints
 | Name | Type |
 | --- | --- |
