--- a/contents/docs/classes/easing-animation/index.mdx
+++ b/contents/docs/classes/easing-animation/index.mdx
@@ -2,7 +2,7 @@
 title: EasingAnimation
 description: An animation for easing transitions between two points.
 ---
-- <ApiSig name="EasingAnimation" multiline params={[{ name: "start", type: "Vec2" }, { name: "end", type: "Vec2" }, { name: "duration", type: "float" }, { name: "ease_func", type: "Callable[[float], float]" }]} />
+- <ApiSig name="EasingAnimation" multiline params={[{ name: "ease_func", type: "Callable[[float], float]" }, { name: "duration", type: "float" }]} />
 
 ## Properties
 <hr style={{marginBottom: 0}} />
@@ -10,6 +10,8 @@ description: An animation for easing transitions between two points.
 | Name | Description | Type |
 | --- | --- | --- |
 | `is_done` | Indicates if the animation is complete | `bool` |
+| `start_pos` | The starting position of the animation | `Vec2` |
+| `end_pos` | The ending position of the animation | `Vec2` |
 
 ## Methods
 ---
