Switch images to WebP and update docs structure
Replaced PNG images with WebP format across the app and documentation for improved performance. Added new documentation index pages for classes, functions, manual, guides, and renderer usage. Updated navigation, breadcrumbs, and route configs to reflect new doc structure and links. Added WebM video background support.

--- a/contents/guides/using-the-renderer/drawing-shapes/index.mdx
+++ b/contents/guides/using-the-renderer/drawing-shapes/index.mdx
@@ -15,7 +15,7 @@ kn.draw.rect(rect, color=kn.color.WHITE)
 ```
 
 <p style={{marginBottom: 0}}><i>Result:</i></p>
-<img src="/images/shapes-01.png" alt="A 50x30 rectangle drawn at (100, 100)" />
+<img src="/images/shapes-01.webp" alt="A 50x30 rectangle drawn at (100, 100)" />
 
 ## Other Primitives
 Alongside rectangles, we can also draw circles, lines, points, and polygons.
@@ -41,4 +41,4 @@ while kn.window.is_open():
 ```
 
 <p style={{marginBottom: 0}}><i>Result:</i></p>
-<img src="/images/shapes-02.png" alt="Two overlapping rectangles drawn to the screen" />
+<img src="/images/shapes-02.webp" alt="Two overlapping rectangles drawn to the screen" />
