--- a/contents/guides/index.mdx
+++ b/contents/guides/index.mdx
@@ -4,7 +4,7 @@ title: Introduction
 
 Welcome to **Kraken Engine**!
 
-<img src="/images/kraken-engine-banner.png" alt="Kraken Engine Banner" style={{borderWidth: 0}} />
+<img src="/images/kraken-engine-banner.webp" alt="Kraken Engine Banner" style={{borderWidth: 0}} />
 
 Fast and lightweight, Kraken is a 2D videogame development framework built on top of SDL3.
 It's designed to offer just the right balance between high-level convenience and low-level control, making it ideal for both hobbyists and experienced developers.
