--- a/contents/docs/functions/window/index.mdx
+++ b/contents/docs/functions/window/index.mdx
@@ -132,3 +132,16 @@ _**Parameters**_
 - `path` : The file path where the screenshot will be saved.
 
 </div>
+
+## Set Icon
+<div className="api-card">
+
+<ApiSig name="set_icon" params={[{ name: "path", type: "str" }]} returns="None" />
+
+Set the icon of the application window.
+
+_**Parameters**_
+
+- `path` : The file path to the icon image.
+
+</div>
