Fixed bug in frame/index.mdx.

--- a/contents/docs/classes/frame/index.mdx
+++ b/contents/docs/classes/frame/index.mdx
@@ -1,8 +1,6 @@
 ---
 title: Frame
-description: A single animation frame containing texture and rectangle data. 
-Represents one frame of an animation with its associated texture and the rectangle
-defining which portion of the texture to display.
+description: A single animation frame containing texture and rectangle data. Represents one frame of an animation with its associated texture and the rectangle defining which portion of the texture to display.
 ---
 
 - <ApiSig name="Frame" />
